# c-utils

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  darr.h  dstr.h  dyn_arr.h  hash_table.h  ht.h  json.h  math_utils.h  strv.h  test.json  utils.h
tests/: test_darr.c  test_dstr.c  test_dyn_arr.c  test_hash_table.c  test_ht.c  test_json.c  test_strv.c
